--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2726b1</color>
     <color name="colorPrimaryDark">#181461</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#3440A8</color>
     <color name="white">#ffffff</color>
     <color name="black">#000</color>
     <color name="grey">#948F8F</color>
