--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,6 +77,7 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:hint="@string/text_email"
+            android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/grey"
             android:drawablePadding="10dp"
             android:drawableLeft="@drawable/ic_email_icon"/>
@@ -100,6 +101,7 @@
             android:layout_height="match_parent"
             android:inputType="text"
             android:hint="@string/text_pwd"
+            android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/grey"
             android:drawablePadding="10dp"
             android:drawableLeft="@drawable/ic_key"/>
