--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -41,6 +41,7 @@
             android:layout_gravity="center_horizontal"/>
 
         <Button
+            android:id="@+id/btn_getstarted"
             android:layout_width="120dp"
             android:layout_height="40dp"
             android:text="@string/text_get_started"
