--- a/app/src/main/res/layout/fragment_help_support.xml
+++ b/app/src/main/res/layout/fragment_help_support.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/startup_background_color"
-    tools:context=".ui.HelpSupport">
+    tools:context=".ui.help.HelpSupport">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_how_to_use"
