--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,14 +15,14 @@
         <item
             android:id="@+id/nav_feedback"
             android:icon="@drawable/ic_feedback_icon"
-            android:title="@string/text_medical_reports" />
+            android:title="@string/text_feedback" />
         <item
             android:id="@+id/nav_help"
             android:icon="@drawable/ic_help_icon"
-            android:title="@string/text_medical_reports" />
+            android:title="@string/text_help" />
         <item
             android:id="@+id/nav_acc_settings"
             android:icon="@drawable/ic_account_circle"
-            android:title="@string/text_medical_reports" />
+            android:title="@string/text_acc_settings" />
     </group>
 </menu>
