--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -14,38 +14,28 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
             app:popupTheme="@style/PopupOverlay" >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:gravity="start|center_vertical"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:id="@+id/btn_drawer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_menu28"/>
 
                     <TextView
                         android:id="@+id/toolbar_title"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/text_dashboard"
                         android:textSize="24sp"
+                        android:layout_weight="1"
+                        android:layout_gravity="start|center_vertical"
                         android:textColor="@color/colorPrimaryDark"
                         android:fontFamily="@font/circular_std_black"
                         android:layout_marginTop="10dp"/>
-                </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -55,16 +45,16 @@
 
                     <ImageView
                         android:id="@+id/btn_home"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="end"
                         android:layout_margin="10dp"
                         android:src="@drawable/ic_home24" />
 
                     <ImageView
                         android:id="@+id/btn_user_acc"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="end"
                         android:layout_margin="10dp"
                         android:src="@drawable/ic_user" />
