--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/startup_background_color"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".common.SignUpActivity">
 
     <LinearLayout
