--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#000</color>
     <color name="grey">#948F8F</color>
     <color name="startup_background_color">#ECF1FA</color>
+    <color name="rating_star">#FFDF00</color>
 </resources>
