--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -12,7 +12,7 @@
         android:id="@+id/title_leave_feedback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Leave your feedback for DigiReport"
+        android:text="@string/text_leave_your_feedback_for_digireport"
         android:textStyle="bold"
         android:textSize="22sp"
         android:layout_margin="10dp"
@@ -62,7 +62,7 @@
 
     <RatingBar
         android:id="@+id/ratingBar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/startup_background_color"
         android:numStars="5"
@@ -72,54 +72,66 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll_msg" />
 
-    <EditText
-        android:id="@+id/edittext_feedback"
+    <ScrollView
+        android:id="@+id/sv_feedback"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:layout_marginTop="30dp"
-        android:hint="@string/text_write_your_feedback"
-        android:textColorHint="@color/grey"
-        android:background="@color/white"
-        android:padding="20dp"
+        android:layout_height="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/btn_submit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="20dp"
-        android:layout_margin="20dp"
-        app:cardBackgroundColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/edittext_feedback"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-        <TextView
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
+        app:layout_constraintBottom_toTopOf="@id/ll_btns">
+        <EditText
+            android:id="@+id/edittext_feedback"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/btn_submit"
-            android:padding="5dp"
-            android:textColor="@color/white"
-            android:textSize="28sp"
-            android:fontFamily="@font/circular_std_black"
-            android:gravity="center_horizontal" />
+            android:layout_height="wrap_content"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            android:hint="@string/text_write_your_feedback"
+            android:textColorHint="@color/grey"
+            android:background="@color/white"
+            android:padding="20dp" />
+    </ScrollView>
 
-    </androidx.cardview.widget.CardView>
-
-    <TextView
+    <LinearLayout
+        android:id="@+id/ll_btns"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_thank_you_for_using_digireport"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/sv_feedback"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="24sp"
-        android:layout_marginBottom="15dp"
-        android:fontFamily="@font/circular_std_medium"/>
+        app:layout_constraintRight_toRightOf="parent">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/btn_submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="20dp"
+            android:layout_margin="20dp"
+            app:cardBackgroundColor="@color/colorPrimary">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/btn_submit"
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="28sp"
+                android:fontFamily="@font/circular_std_black"
+                android:gravity="center_horizontal" />
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_thank_you_for_using_digireport"
+            app:layout_constraintTop_toBottomOf="@id/btn_submit"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/circular_std_medium"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
