feedback fragment and my profile updated

--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -45,7 +45,7 @@
             android:id="@+id/total_saved_report"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10"
+            android:text="  "
             android:textSize="18sp"
             android:textColor="@color/colorPrimaryDark"
             android:fontFamily="@font/circular_std_book" />
