--- a/app/src/main/res/layout/fragment_add_reports.xml
+++ b/app/src/main/res/layout/fragment_add_reports.xml
@@ -85,9 +85,10 @@
         android:id="@+id/pic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleType="centerInside"
         android:src="@drawable/ic_lady_with_report"
-        app:layout_constraintTop_toBottomOf="@id/btn_upload"
-        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@id/btn_add_report"
+        android:layout_marginBottom="20dp"
         android:foregroundGravity="center_horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
