--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -31,30 +31,37 @@
 
     </androidx.cardview.widget.CardView>
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:rowCount="2"
-        android:columnCount="2"
-        android:padding="15dp"
-        android:layout_margin="15dp"
-        app:layout_constraintTop_toBottomOf="@id/cv_search"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+<!--    <GridLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:rowCount="2"-->
+<!--        android:columnCount="2"-->
+<!--        android:padding="15dp"-->
+<!--        android:layout_margin="15dp"-->
+<!--        android:alignmentMode="alignBounds"-->
+<!--        android:useDefaultMargins="true"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/cv_search"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent">-->
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_add_report"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|top"
-            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginBottom="10dp"
             android:padding="5dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="9dp"
-            app:cardElevation="5dp">
+            app:cardElevation="5dp"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintTop_toBottomOf="@id/cv_search"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/cv_my_report">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -74,8 +81,9 @@
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:adjustViewBounds="true"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_lady_with_report" />
             </LinearLayout>
@@ -85,15 +93,19 @@
             android:id="@+id/cv_my_report"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|top"
-            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginBottom="10dp"
             android:padding="5dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="9dp"
-            app:cardElevation="5dp">
+            app:cardElevation="5dp"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintTop_toBottomOf="@id/cv_search"
+            app:layout_constraintStart_toEndOf="@id/cv_add_report"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -113,8 +125,9 @@
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:adjustViewBounds="true"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_get_data_anytime" />
             </LinearLayout>
@@ -126,8 +139,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="15dp"
-            android:gravity="bottom|start">
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintTop_toBottomOf="@id/cv_add_report"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/cv_my_acc">
 
             <ImageView
                 android:layout_width="150dp"
@@ -139,6 +158,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:textSize="26sp"
+                android:layout_gravity="center_horizontal"
                 android:textStyle="bold"
                 android:fontFamily="@font/circular_std_medium"
                 android:textColor="@color/colorPrimaryDark"/>
@@ -149,15 +169,18 @@
             android:id="@+id/cv_my_acc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:padding="5dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="9dp"
-            app:cardElevation="5dp">
+            app:cardElevation="5dp"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintStart_toEndOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/cv_my_report"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -177,12 +200,12 @@
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_acc_settings" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-    </GridLayout>
+<!--    </GridLayout>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
