--- a/app/src/main/res/layout/single_report.xml
+++ b/app/src/main/res/layout/single_report.xml
@@ -73,5 +73,14 @@
                     android:src="@drawable/ic_view_icon"/>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--    quick and dirty divider-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_gravity="bottom"
+        />
 <!--    </LinearLayout>-->
 </LinearLayout>
