--- a/app/src/main/res/layout/view_report_fragment.xml
+++ b/app/src/main/res/layout/view_report_fragment.xml
@@ -35,6 +35,21 @@
             </TableRow>
 
             <TableRow style="@style/BodyRow">
+                <TextView android:text="@string/report_hb"
+                    style="@style/BodyText"
+                    android:layout_weight="0.2" />
+                <TextView android:text="Cell 1,2"
+                    style="@style/BodyText"
+                    android:layout_weight="0.4" />
+                <TextView android:text="Cell 1,3"
+                    android:layout_weight="0.3"
+                    style="@style/BodyText" />
+                <TextView android:text="Cell 1,4"
+                    android:layout_weight="0.1"
+                    style="@style/BodyText" />
+            </TableRow>
+
+            <TableRow style="@style/BodyRow">
                 <TextView android:text="@string/report_rbc"
                     style="@style/BodyText"
                     android:layout_weight="0.2" />
