date bug fixed, also report view minor changes done🔧

--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TableLayout android:layout_height="wrap_content"
+        <TableLayout
+            android:id="@+id/tablelayout"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent">
             <TableRow style="@style/CommonHeader">
                 <TextView android:text="Observation"
