--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -127,9 +127,9 @@
                 <TextView android:text="unit"
                     android:layout_weight="0.3"
                     style="@style/CommonHeaderText" />
-                <TextView android:text="Normal Range"
-                    android:layout_weight="0.1"
-                    style="@style/CommonHeaderText" />
+<!--                <TextView android:text="Normal Range"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/CommonHeaderText" />-->
             </TableRow>
 
             <TableRow style="@style/HeaderRow"
@@ -151,9 +151,9 @@
                     android:id="@+id/unit_hb"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -169,9 +169,9 @@
                     android:id="@+id/unit_rbc"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -187,9 +187,9 @@
                     android:id="@+id/unit_wbc"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -205,9 +205,9 @@
                     android:id="@+id/unit_platelet"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/HeaderRow"
@@ -228,9 +228,9 @@
                     android:id="@+id/unit_polymorphs"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -245,9 +245,9 @@
                     android:id="@+id/unit_lympho"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -262,9 +262,9 @@
                     android:id="@+id/unit_eosi"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -279,9 +279,9 @@
                     android:id="@+id/unit_monocytes"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -296,9 +296,9 @@
                     android:id="@+id/unit_basophils"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/HeaderRow"
@@ -319,9 +319,9 @@
                     android:id="@+id/unit_mcv"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -336,9 +336,9 @@
                     android:id="@+id/unit_mch"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -353,9 +353,9 @@
                     android:id="@+id/unit_mchc"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
             <TableRow style="@style/BodyRow">
@@ -370,9 +370,9 @@
                     android:id="@+id/unit_rdw"
                     android:layout_weight="0.3"
                     style="@style/BodyText" />
-                <TextView android:text="Cell 1,4"
-                    android:layout_weight="0.1"
-                    style="@style/BodyText" />
+<!--                <TextView android:text="Cell 1,4"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    style="@style/BodyText" />-->
             </TableRow>
 
 <!--            <TableRow style="@style/HeaderRow"-->
