--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -14,6 +14,7 @@
         app:cardCornerRadius="10dp"
         android:layout_margin="20dp"
         app:cardBackgroundColor="@color/white"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
@@ -206,6 +207,17 @@
                     android:src="@drawable/ic_acc_settings" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="14sp"
+        android:gravity="center_horizontal"
+        android:text="&#169; DigiReport 2021"/>
 
 <!--    </GridLayout>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
