--- a/app/src/main/res/layout/fragment_help_support.xml
+++ b/app/src/main/res/layout/fragment_help_support.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
         android:foregroundGravity="center"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/cv_how_to_use"
@@ -43,68 +44,67 @@
         app:layout_constraintRight_toRightOf="parent"
         app:cardCornerRadius="20dp"
         android:backgroundTint="@color/white">
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
-            <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_gravity="start|center_vertical"
+            android:orientation="vertical">
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:layout_gravity="start|center_vertical"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Step 1:"
-                    android:textSize="18sp"
-                    android:textColor="@color/grey"
-                    android:fontFamily="@font/circular_std_medium"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Step 2:"
-                    android:textSize="18sp"
-                    android:textColor="@color/grey"
-                    android:fontFamily="@font/circular_std_medium"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Step 3:"
-                    android:textSize="18sp"
-                    android:textColor="@color/grey"
-                    android:fontFamily="@font/circular_std_medium"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/logo"
+                android:layout_margin="8dp"
+                android:text="Step 1: Go to Add your report section"
+                android:textSize="18sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/circular_std_medium"/>
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
-
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/ic_app_icon_blue"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textSize="26sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/circular_std_medium"
-                    android:textColor="@color/colorPrimaryDark"/>
-
-            </LinearLayout>
+                android:layout_margin="8dp"
+                android:text="Step 2: Add report name and report image and hit add report button"
+                android:textSize="18sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/circular_std_medium"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="Step 3: See your added report in the view report option"
+                android:textSize="18sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/circular_std_medium"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_weight="0.2"
+        app:layout_constraintTop_toBottomOf="@id/cv_steps"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_app_icon_blue"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/circular_std_medium"
+            android:textColor="@color/colorPrimaryDark"/>
+
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/frame1"
@@ -114,7 +114,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintTop_toBottomOf="@id/cv_steps"
+        app:layout_constraintTop_toBottomOf="@id/logo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
