--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Temp User"
+                android:text="Guest User"
                 android:textColor="@color/colorPrimary"
                 android:textSize="24sp"
                 android:padding="10dp"
@@ -50,7 +50,7 @@
                 android:id="@+id/useremail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="abc@gmail.com"
+                android:text="emailid@email.com"
                 android:textColor="@color/colorPrimary"
                 android:textSize="24sp"
                 android:padding="10dp"
@@ -65,6 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="1"
+            android:visibility="gone"
             android:layout_gravity="end|center_vertical"
             android:contentDescription="@string/nav_header_desc"
             android:padding="10dp"
@@ -80,6 +81,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="40dp"
+        android:visibility="gone"
         app:cardBackgroundColor="@color/colorPrimary"
         app:layout_constraintTop_toBottomOf="@id/ll_info"
         app:layout_constraintLeft_toLeftOf="parent"
