--- a/app/src/main/res/layout/fragment_add_reports.xml
+++ b/app/src/main/res/layout/fragment_add_reports.xml
@@ -49,6 +49,7 @@
             app:cardCornerRadius="10dp"
             android:layout_margin="20dp"
             app:cardBackgroundColor="@color/white"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/cv_report_name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
