login activity shared pref, forgot pwd validation

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -127,10 +127,12 @@
             android:id="@+id/edittext_su_mobile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="text"
+            android:inputType="phone"
             android:textColor="@color/colorPrimaryDark"
             android:hint="@string/text_mobile"
-            android:textColorHint="@color/grey" />
+            android:textColorHint="@color/grey"
+            android:drawablePadding="10dp"
+            android:drawableLeft="@drawable/ic_phone_24"/>
 
     </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
