email verification + forgot password

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -48,7 +48,7 @@
         app:layout_constraintRight_toRightOf="parent">
 
         <EditText
-            android:id="@+id/edittext_si_email"
+            android:id="@+id/edittext_fp_email"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
