--- a/app/src/main/res/drawable/fade_blue.xml
+++ b/app/src/main/res/drawable/fade_blue.xml
@@ -3,5 +3,5 @@
     <gradient
         android:angle="90"
         android:startColor="#E4F9F5"
-        android:endColor="#11999E" />
+        android:endColor="@color/colorPrimary" />
 </shape>
