major changes in the visualisation part

--- a/app/src/main/res/layout/activity_visualisation.xml
+++ b/app/src/main/res/layout/activity_visualisation.xml
@@ -60,7 +60,7 @@
                 android:layout_height="160dp"
                 android:adjustViewBounds="true"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_lady_with_report" />
+                android:src="@drawable/ic_hb" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -103,8 +103,9 @@
                 android:layout_width="160dp"
                 android:layout_height="160dp"
                 android:adjustViewBounds="true"
+                android:padding="20dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_get_data_anytime" />
+                android:src="@drawable/ic_rbc" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -180,7 +181,8 @@
                 android:layout_height="160dp"
                 android:adjustViewBounds="true"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_get_data_anytime" />
+                android:padding="20dp"
+                android:src="@drawable/ic_wbc" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -222,7 +224,8 @@
                 android:layout_width="160dp"
                 android:layout_height="160dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_acc_settings" />
+                android:padding="20dp"
+                android:src="@drawable/ic_platelets" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
